welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:4: error: value unary_! is not a member of plm.universe.Direction
		while (!getDirection==OUEST) {droite()}
                       ^