welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
	def seMettreEnPosition() {
		while (!getDirection==OUEST) {droite()}
	}
	def positionFinale():Boolean = {
			if (estFaceMur) {return true}
			else {false}
		}
		
		}
	




